--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
               "showSocial": true,
               "title": "Entrepreneur & Full Stack Developer",
               "spotlightButton": {
-                "text": "Go to DGmusic!",
-                "url": "https:\u002F\u002Fsoundcloud.com/dorukgezici",
-                "icon": "music",
+                "text": "Contact Me",
+                "url": "mailto:doruk@gezici.me",
+                "icon": "envelope",
               },
             },
             "theme": 0,
@@ -194,7 +194,7 @@
             "data": {
               "image1": "https:\u002F\u002Ffirebasestorage.googleapis.com\u002Fv0\u002Fb\u002Fdevfolio-me.appspot.com\u002Fo\u002FImages%2FqsL9Cx4VFYOR6L3jAZu3IxZ2agW2%2F514c7446-73fb-41f2-8100-38124393c5f7?alt=media&token=ae4cee33-3d2e-48b2-9218-9e4a138d611f",
               "subheading1": "Doruk Gezici",
-              "content1": "Computer Engineering student who is very passionate about information technologies, innovation, entrepreneurship and leadership.\n\nExperienced in leading a team, creating innovative business models\u002Fsolutions, Full Stack Web Development (Python\u002FDjango, Linux SysAdmin, HTML\u002FCSS), IoT (AWS, Raspberry Pi, Arduino), Mobile Apps (iOS, Swift) and eSports.\n\nInterested in making everything more efficient, autonomous and smart. Also loves to play some blues rock with his electric guitar.",
+              "content1": "A curious hacker who is passionate about software, blockchain, innovation, entrepreneurship and leadership.\n\nExperienced in product management, web development and architecture, DevOps, IoT and iOS apps. Interested in making everything more efficient, autonomous and smart.\n\nPrefers tech stack of Python, Django REST Framework, Docker, AWS, PostgreSQL, Kubernetes, Rancher, Celery, RabbitMQ, Redis, VueJS, Bootstrap, Firebase, Sentry, GitHub Actions, Hotjar, Cloudflare, Google Data Studio, Trello, Slack...\n\nAlso loves to play and record some jams and songs which you can check out at [soundcloud.com](https://soundcloud.com/dorukgezici).",
               "heading1": "Who.is",
             },
             "theme": 0,
@@ -319,7 +319,7 @@
                   "endDate": "2019-05-23",
                   "startDate": "2018-05-01",
                 }],
-              "subheading": "You can reach me via [email](mailto:doruk@gezici.me)",
+              "subheading": "If you are looking for consulting, you can reach me via [email](mailto:doruk@gezici.me) or [LinkedIn](https://linkedin.com/in/dorukgezici)",
             },
             "theme": 0,
             "isEnabled": true,
@@ -653,10 +653,10 @@
                             </div>
                             <div style="text-align:center" class="c2a-btn-wrapper"><a
                                     class="c2a-btn"
-                                    href="https://soundcloud.com/dorukgezici"
+                                    href="mailto:doruk@gezici.me"
                                     target="_blank"
                                     style="color:#ffffffff;text-align:center;background-color:#000000ff;padding-left:3.2em;border-width:1px;border-color:#ffffffff;font-weight:700;padding-right:3.2em;font-size:1.2rem;line-height:1.3;border-radius:undefinedrem;text-shadow:0.01em 0.02em 0.05em undefined;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem;width:auto"
-                            ><i class="fas fa-music"></i></a></div>
+                            ><i class="fas fa-envelope"></i></a></div>
                             <div
                                     style="font-size:2rem;text-align:center;color:#ffffffff;iconized:;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
                                     class="social-wrapper"
@@ -725,15 +725,7 @@
                                             style="font-size:1.1rem;line-height:1.75;text-align:left;color:#555555ff;font-weight:400;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
                                             class="section-markdown about-content-1"
                                     >
-                                        <div class="markdown"><p>Computer Engineering student who is very passionate
-                                            about information technologies, innovation, entrepreneurship and
-                                            leadership.</p>
-                                            <p>Experienced in leading a team, creating innovative business
-                                                models/solutions, Full Stack Web Development (Python/Django, Linux
-                                                SysAdmin, HTML/CSS), IoT (AWS, Raspberry Pi, Arduino), Mobile Apps (iOS,
-                                                Swift) and eSports.</p>
-                                            <p>Interested in making everything more efficient, autonomous and smart.
-                                                Also loves to play some blues rock with his electric guitar.</p></div>
+                                        <div class="markdown"></div>
                                     </div>
                                 </div>
                             </div>
