Updated info - added Udext

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           "sections": [{
             "misc": {},
             "data": {
-              "about": "[LIVAD Technologies](https:\u002F\u002Flivad.stream), [Gamer Arena](https:\u002F\u002Fgamerarena.com), [ITUscheduler](https:\u002F\u002Fituscheduler.com)",
+              "about": "[Udext](https:\u002F\u002Fudext.com), [Gamer Arena](https:\u002F\u002Fgamerarena.com), [ITUscheduler](https:\u002F\u002Fituscheduler.com)",
               "name": "Doruk Gezici",
               "showSocial": true,
               "title": "Entrepreneur & Full Stack Developer",
@@ -239,26 +239,18 @@
               "heading": "Experiences",
               "items": [
                 {
-                  "startDate": "2021-10-01",
-                  "id": "aa9f1db8-6b39-43a2-a6a6-30a1dcb7ee4b",
-                  "location": "Istanbul, Turkey",
-                  "role": "Head of Architecture",
+                  "startDate": "2022-09-01",
+                  "id": "aa9f1db8-6b39-43a2-a6a6-30a1dcb7ee4bY",
+                  "location": "Chicago, USA",
+                  "role": "Co-Founder",
                   "isCurrent": true,
-                  "companyName": "LIVAD Technologies",
-                  "description": "[https://livad.stream](https:\u002F\u002Flivad.stream)",
-                }, {
-                  "startDate": "2019-05-23",
-                  "endDate": "2021-08-23",
-                  "id": "aa9f1db8-6b39-43a2-a6a6-30a1dcb7ee4b",
-                  "location": "Istanbul, Turkey",
-                  "role": "CEO & Co-Founder",
-                  "isCurrent": false,
-                  "companyName": "Gamer Arena",
-                  "description": "[https://gamerarena.com](https:\u002F\u002Fgamerarena.com)",
-                }, {
+                  "companyName": "Ulabs",
+                  "description": "[https://udext.com](https:\u002F\u002Fudext.com)",
+                },
+                {
                   "isCurrent": true,
                   "companyName": "Turkish Entrepreneurship Foundation",
-                  "description": "As fellows of Turkish Entrepreneurship Foundation, we aim to spread entrepreneurial mindset and culture, aiming to create inspiring stories as an influential network.",
+                  "description": "As fellows of Turkish Entrepreneurship Foundation, we aim to spread entrepreneurial mindset and culture, aiming to create inspiring stories as an influential network. [https://www.girisimcilikvakfi.org/](https:\u002F\u002Fwww.girisimcilikvakfi.org)",
                   "timeStamp": null,
                   "pageY": null,
                   "ctrlKey": null,
@@ -275,7 +267,7 @@
                   "type": null,
                   "clientX": null,
                   "detail": null,
-                  "role": "Fellow \u002F Alumni",
+                  "role": "Alumni",
                   "dispatchConfig": null,
                   "view": null,
                   "getModifierState": null,
@@ -298,7 +290,28 @@
                   "defaultPrevented": null,
                   "button": null,
                   "isTrusted": null,
-                }, {
+                },
+                {
+                  "startDate": "2021-10-01",
+                  "endDate": "2022-02-02",
+                  "id": "aa9f1db8-6b39-43a2-a6a6-30a1dcb7ee4bX",
+                  "location": "Istanbul, Turkey",
+                  "role": "Head of Architecture",
+                  "isCurrent": false,
+                  "companyName": "LIVAD Technologies",
+                  "description": "[https://livad.stream](https:\u002F\u002Flivad.stream)",
+                },
+                {
+                  "startDate": "2019-05-23",
+                  "endDate": "2021-08-23",
+                  "id": "aa9f1db8-6b39-43a2-a6a6-30a1dcb7ee4b",
+                  "location": "Istanbul, Turkey",
+                  "role": "CEO & Co-Founder",
+                  "isCurrent": false,
+                  "companyName": "Gamer Arena",
+                  "description": "[https://gamerarena.com](https:\u002F\u002Fgamerarena.com)",
+                },
+                {
                   "id": "1",
                   "companyLogo": "https:\u002F\u002Ffirebasestorage.googleapis.com\u002Fv0\u002Fb\u002Fdevfolio-me.appspot.com\u002Fo\u002FImages%2FqsL9Cx4VFYOR6L3jAZu3IxZ2agW2%2F2d7b42f6-038d-422a-8377-ee625de476a9?alt=media&token=005d6ad9-69f6-4fc6-b039-9b7f65927362",
                   "location": "Istanbul, Turkey",
@@ -308,7 +321,8 @@
                   "description": "Building a hybrid IoT Cloud platform as a Full Stack Developer and a Linux SysAdmin. Using Python\u002FDjango, Amazon AWS (EC2, Lambda, IoT Core) extensively.",
                   "endDate": "2019-06-01",
                   "startDate": "2018-07-03",
-                }, {
+                },
+                {
                   "id": "0",
                   "companyLogo": "https:\u002F\u002Ffirebasestorage.googleapis.com\u002Fv0\u002Fb\u002Fdevfolio-me.appspot.com\u002Fo\u002FImages%2FqsL9Cx4VFYOR6L3jAZu3IxZ2agW2%2Fbec31b0e-1d87-4c35-b306-3922b55fe94c?alt=media&token=55062bec-1455-4b4d-90e3-d443cb0d6009",
                   "location": "Istanbul, Turkey",
@@ -754,7 +768,7 @@
                             <div data-aos="fade-up" class="experience0">
                                 <div
                                         class="experience-company-logo"
-                                        style="width:4rem;height:4rem;border-radius:0%;background-image:url(https://uploads-ssl.webflow.com/5edf6d123e0e0a3ffd4c7eea/60f9da802ec28b76ef8385ec_livad_pp-256x%20\(1\).png)"
+                                        style="width:4rem;height:4rem;border-radius:0%;background-image:url(https://app.udext.com/icons/apple-touch-icon.png)"
                                 ></div>
                                 <div class="experience-content"><h4
                                         style="font-size:1.4rem;color:#000000ff;font-weight:700;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
@@ -777,39 +791,8 @@
                                     >
                                         <div style="max-width:650px" class="markdown"><p><a
                                                 target="_blank"
-                                                href="https://livad.stream"
+                                                href="https://udext.com"
                                         ></a></p></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div data-aos="fade-up" class="experience0">
-                                <div
-                                        class="experience-company-logo"
-                                        style="width:4rem;height:4rem;border-radius:0%;background-image:url(https://firebasestorage.googleapis.com/v0/b/devfolio-me.appspot.com/o/Images%2FqsL9Cx4VFYOR6L3jAZu3IxZ2agW2%2Fc1c9699f-2819-450a-be79-fafdcfbd8ed0?alt=media&amp;token=0a05fd55-73c6-4dbb-be52-751fa7b8afbd)"
-                                ></div>
-                                <div class="experience-content"><h4
-                                        style="font-size:1.4rem;color:#000000ff;font-weight:700;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
-                                        class="experience-role"
-                                >Co-Founder</h4><h6
-                                        style="color:#000000cc;font-weight:400;font-size:1.35rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
-                                        class="experience-company-name"
-                                >Gamer Arena</h6>
-                                    <p
-                                            style="font-size:1.05rem;color:#00000080;font-weight:400;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
-                                            class="experience-duration"
-                                    ><span>May, 2019<!-- --> <b>-</b> <!-- -->Current<!-- --> • 10 mos</span></p>
-                                    <p
-                                            style="color:#00000080;font-weight:400;font-size:1.05rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
-                                            class="experience-location"
-                                    >Kolektif House Levent</p>
-                                    <div
-                                            style="color:#555555ff;font-weight:400;container-width:650px;font-size:1.1rem;line-height:1.6;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
-                                            class="section-markdown experience-description"
-                                    >
-                                        <div style="max-width:650px" class="markdown"><p><a
-                                                target="_blank"
-                                                href="https://gamerarena.com"
-                                        >GamerArena.com</a></p></div>
                                     </div>
                                 </div>
                             </div>
@@ -866,6 +849,68 @@
                                             Entrepreneurship Foundation, we aim to spread entrepreneurial mindset and
                                             culture, aiming to create inspiring stories as an influential network.</p>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-up" class="experience0">
+                                <div
+                                        class="experience-company-logo"
+                                        style="width:4rem;height:4rem;border-radius:0%;background-image:url(https://uploads-ssl.webflow.com/5edf6d123e0e0a3ffd4c7eea/60f9da802ec28b76ef8385ec_livad_pp-256x%20\(1\).png)"
+                                ></div>
+                                <div class="experience-content"><h4
+                                        style="font-size:1.4rem;color:#000000ff;font-weight:700;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                        class="experience-role"
+                                ></h4><h6
+                                        style="color:#000000cc;font-weight:400;font-size:1.35rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                        class="experience-company-name"
+                                ></h6>
+                                    <p
+                                            style="font-size:1.05rem;color:#00000080;font-weight:400;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="experience-duration"
+                                    ><span></span></p>
+                                    <p
+                                            style="color:#00000080;font-weight:400;font-size:1.05rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="experience-location"
+                                    ></p>
+                                    <div
+                                            style="color:#555555ff;font-weight:400;container-width:650px;font-size:1.1rem;line-height:1.6;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="section-markdown experience-description"
+                                    >
+                                        <div style="max-width:650px" class="markdown"><p><a
+                                                target="_blank"
+                                                href="https://livad.stream"
+                                        ></a></p></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-up" class="experience0">
+                                <div
+                                        class="experience-company-logo"
+                                        style="width:4rem;height:4rem;border-radius:0%;background-image:url(https://firebasestorage.googleapis.com/v0/b/devfolio-me.appspot.com/o/Images%2FqsL9Cx4VFYOR6L3jAZu3IxZ2agW2%2Fc1c9699f-2819-450a-be79-fafdcfbd8ed0?alt=media&amp;token=0a05fd55-73c6-4dbb-be52-751fa7b8afbd)"
+                                ></div>
+                                <div class="experience-content"><h4
+                                        style="font-size:1.4rem;color:#000000ff;font-weight:700;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                        class="experience-role"
+                                >Co-Founder</h4><h6
+                                        style="color:#000000cc;font-weight:400;font-size:1.35rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                        class="experience-company-name"
+                                >Gamer Arena</h6>
+                                    <p
+                                            style="font-size:1.05rem;color:#00000080;font-weight:400;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="experience-duration"
+                                    ><span>May, 2019<!-- --> <b>-</b> <!-- -->Current<!-- --> • 10 mos</span></p>
+                                    <p
+                                            style="color:#00000080;font-weight:400;font-size:1.05rem;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="experience-location"
+                                    >Kolektif House Levent</p>
+                                    <div
+                                            style="color:#555555ff;font-weight:400;container-width:650px;font-size:1.1rem;line-height:1.6;border-radius:undefinedrem;border-width:undefinedpx;text-shadow:0.01em 0.02em 0.05em undefined;padding-left:undefinedem;padding-right:undefinedem;padding-bottom:undefinedem;padding-top:undefinedem;padding:undefinedem"
+                                            class="section-markdown experience-description"
+                                    >
+                                        <div style="max-width:650px" class="markdown"><p><a
+                                                target="_blank"
+                                                href="https://gamerarena.com"
+                                        >GamerArena.com</a></p></div>
                                     </div>
                                 </div>
                             </div>
