Added Who.is section

--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Doruk Gezici | Entrepreneur & Full Stack Developer</title>
+  <title>Doruk Gezici | DGtech</title>
 
   <meta name="author" content="Doruk Gezici"/>
-  <meta name="description" content="Check out the portfolio of Doruk Gezici, Entrepreneur & Full Stack Developer."/>
-  <meta name="keywords" content="doruk,gezici,dorukgezici,gamer,arena,gamerarena,ituscheduler,cryptopatro"/>
+  <meta name="description" content="Check out the portfolio of Doruk Gezici, Full Stack Developer & Entrepreneur."/>
+  <meta name="keywords" content="doruk,gezici,dorukgezici,dgtech,gamer,arena,gamerarena,ituscheduler,cryptopatro"/>
   <meta name="robots" content="index, follow"/>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="https://doruk.gezici.me/img/dg-girvak.jpg"/>
+  <link rel="shortcut icon" href="/img/dg-girvak.jpg"/>
 
   <!-- Lato Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,900&amp;subset=latin-ext"/>
 
-  <!-- OG Metadata -->
+  <!-- Open Graph Metadata -->
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="doruk.gezici.me"/>
   <meta property="og:url" content="https://doruk.gezici.me"/>
   <meta property="og:image" content="https://doruk.gezici.me/img/dg-girvak.jpg"/>
-  <meta property="og:title" content="Doruk Gezici | Full Stack Developer & Entrepreneur"/>
-  <meta property="og:description" content="Check out the portfolio of Doruk Gezici, Entrepreneur & Full Stack Developer."/>
+  <meta property="og:title" content="Doruk Gezici | DGtech"/>
+  <meta property="og:description" content="Check out the portfolio of Doruk Gezici, Full Stack Developer & Entrepreneur."/>
 </head>
 <body>
 <div id="root"></div>
