Added SoundCloud player on image flip

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="robots" content="index, follow"/>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/img/dg-girvak.jpg"/>
+  <link rel="shortcut icon" href="/img/dg-round.png"/>
 
   <!-- Lato Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,900&amp;subset=latin-ext"/>
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="doruk.gezici.me"/>
   <meta property="og:url" content="https://doruk.gezici.me"/>
-  <meta property="og:image" content="https://doruk.gezici.me/img/dg-girvak.jpg"/>
+  <meta property="og:image" content="https://doruk.gezici.me/img/dg.jpg"/>
   <meta property="og:title" content="Doruk Gezici | DGtech"/>
   <meta property="og:description" content="Check out the portfolio of Doruk Gezici, Full Stack Developer & Entrepreneur."/>
 </head>
